<?xml version="1.0"?>
<package format="2">
  <name>read_calibrated</name>
  <version>0.1.0</version>
  <description>This package parses pbstream file from Google Cartographer for some information I need</description>
  <maintainer email="linh@todo.todo">linh</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cartographer</build_depend>
  <exec_depend>cartographer</exec_depend>
</package>
